update web cach .md file

--- a/HTTP/02前端缓存相关.md
+++ b/HTTP/02前端缓存相关.md
@@ -33,6 +33,10 @@ Cache-Control是 http1.1 时出现的header信息，主要是利用该字段的m
 	* private：只能被终端用户的浏览器缓存，不允许CDN等中继缓存服务器对其缓存。
 	
 > Cache-Control与Expires可以在服务端配置同时启用，同时启用的时候Cache-Control优先级高。
+> 
+> 当 Cache-Control 出现在 request header 中，cache-control:no-control 告诉HTTP消息链上的缓存系统(也就是浏览器的缓存和代理服务器上的缓存)，本次请求要求忽略一切缓存，必须是原始服务器重新计算生成回应给用户。所以，即使浏览器上的本地缓存未过期，或者代理服务器上的缓存未过期，都不要将这些缓存作为回应。当我们在浏览器中强制刷新页面（按ctrl+F5），发送的就是这个头（不同很多浏览器将cache-contro:no-cachel和pragam:no-cache两个头一起发送）
+> 
+`pragma:no-cache`：和cache-control:no-control一样，不过出于兼容HTTP/1.0，所以有些浏览器会保留这个头。注意pragma:no-cache只应该出现在Request中，表明不想获取缓存。HTTP没有哪条条文对Response中的pragma:no-cache进行定义，所以Response中的pragma:no-cache是无效的。
 
 ##### 强缓存的应用
 强缓存是前端性能优化最有力的工具，对于有大量静态资源的网页，一定要利用强缓存，提高响应速度，通常是为这些静态资源全部配置一个超时时间超长的Expires或Cache-Control，这样用户只会在第一次访问网站时加载静态资源，其他时间只要缓存没有失效并且用户没有强制刷新的条件下都会从缓存中加载。然而这种缓存配置方式会带来一个问题，就是当资源更新时，客户端由于有缓存不会向服务器请求最新的资源，这个问题已有解决方案：通过更新页面中引用的资源路径，让浏览器主动放弃缓存，加载新资源。但要实现有更新的文件才需要浏览器重新加载，因此必须让url的修改与文件内容相关联，利用数据摘要算法对文件求摘要信息，摘要信息与文件内容一一对应，这一点许多前端构建工具都做到了，如webpack。
